fix display of scrollbar with chrome browser

--- a/src/App.css
+++ b/src/App.css
@@ -205,7 +205,7 @@ html {
   -ms-transform: translate(-50%, -50%);
   max-height: 40%;
   overflow: scroll;
-  
+  scrollbar-width: none;
 }
 .picture .img-license {
   opacity: 0;
